# LCCV

./: CMakeLists.txt
example/: CMakeLists.txt  takephoto.cpp  takevideo.cpp
include/: lccv.hpp  libcamera_app.hpp  libcamera_app_options.hpp
src/: lccv.cpp  libcamera_app.cpp  libcamera_app_options.cpp
